use Collections.emptyList() and Collections.sort() instead of static import