@@ -16,6 +16,7 @@
 
 package org.killbill.billing.util.entity;
 
+import java.util.Collections;
 import java.util.List;
 
 import org.testng.Assert;
@@ -23,18 +24,16 @@ import org.testng.annotations.Test;
 
 import org.killbill.billing.util.UtilTestSuiteNoDB;
 
-import static java.util.Collections.emptyList;
-
 public class TestDefaultPagination extends UtilTestSuiteNoDB {
 
     @Test(groups = "fast", description = "Test Util: Pagination builder tests")
     public void testDefaultPaginationBuilder() throws Exception {
-        Assert.assertEquals(DefaultPagination.<Integer>build(0L, 0L, emptyList()), expectedOf(0L, 0L, 0L, emptyList()));
-        Assert.assertEquals(DefaultPagination.<Integer>build(0L, 10L, emptyList()), expectedOf(0L, 0L, 0L, emptyList()));
-        Assert.assertEquals(DefaultPagination.<Integer>build(10L, 0L, emptyList()), expectedOf(10L, 0L, 0L, emptyList()));
-        Assert.assertEquals(DefaultPagination.<Integer>build(10L, 10L, emptyList()), expectedOf(10L, 0L, 0L, emptyList()));
+        Assert.assertEquals(DefaultPagination.<Integer>build(0L, 0L, Collections.emptyList()), expectedOf(0L, 0L, 0L, Collections.emptyList()));
+        Assert.assertEquals(DefaultPagination.<Integer>build(0L, 10L, Collections.emptyList()), expectedOf(0L, 0L, 0L, Collections.emptyList()));
+        Assert.assertEquals(DefaultPagination.<Integer>build(10L, 0L, Collections.emptyList()), expectedOf(10L, 0L, 0L, Collections.emptyList()));
+        Assert.assertEquals(DefaultPagination.<Integer>build(10L, 10L, Collections.emptyList()), expectedOf(10L, 0L, 0L, Collections.emptyList()));
 
-        Assert.assertEquals(DefaultPagination.<Integer>build(0L, 0L, List.of(1, 2, 3, 4, 5)), expectedOf(0L, 0L, 5L, emptyList()));
+        Assert.assertEquals(DefaultPagination.<Integer>build(0L, 0L, List.of(1, 2, 3, 4, 5)), expectedOf(0L, 0L, 5L, Collections.emptyList()));
         Assert.assertEquals(DefaultPagination.<Integer>build(0L, 10L, List.of(1, 2, 3, 4, 5)), expectedOf(0L, 5L, 5L, List.of(1, 2, 3, 4, 5)));
         Assert.assertEquals(DefaultPagination.<Integer>build(4L, 10L, List.of(1, 2, 3, 4, 5)), expectedOf(4L, 1L, 5L, List.of(5)));
 
@@ -43,7 +42,7 @@ public class TestDefaultPagination extends UtilTestSuiteNoDB {
         Assert.assertEquals(DefaultPagination.<Integer>build(2L, 3L, List.of(1, 2, 3, 4, 5)), expectedOf(2L, 3L, 5L, List.of(3, 4, 5)));
         Assert.assertEquals(DefaultPagination.<Integer>build(3L, 3L, List.of(1, 2, 3, 4, 5)), expectedOf(3L, 2L, 5L, List.of(4, 5)));
         Assert.assertEquals(DefaultPagination.<Integer>build(4L, 3L, List.of(1, 2, 3, 4, 5)), expectedOf(4L, 1L, 5L, List.of(5)));
-        Assert.assertEquals(DefaultPagination.<Integer>build(5L, 3L, List.of(1, 2, 3, 4, 5)), expectedOf(5L, 0L, 5L, emptyList()));
+        Assert.assertEquals(DefaultPagination.<Integer>build(5L, 3L, List.of(1, 2, 3, 4, 5)), expectedOf(5L, 0L, 5L, Collections.emptyList()));
     }
 
     private Pagination<Integer> expectedOf(final Long currentOffset, final Long totalNbRecords,
